# interactive-picture-site

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_server.py
interactive_picture_site/: app.py  main.py
interactive_picture_site/static/: styles.css
static/: index.html  script.js  styles.css
