[tool.poetry]
name = "interactive-picture-site"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <a.p.wendland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select=[
  "A",
  "B006",
  "C",
  "E",
  "F",
  "I",
  "UP",
  "YTT",
  "W",
  "N",
  "ISC",
  "PLC",
  "RET",
  "RUF100",
  "PGH004"
]
ignore=[
  "ISC001", # conflict with formatter
]

[tool.ruff.format]
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
disable_error_code = [
  "no-any-expr",
]
